--- a/index.html
+++ b/index.html
@@ -59,20 +59,18 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
-                    </li>
-                </ul>
+                <!--<ul class="navbar-nav mx-auto">-->
+                <!--    <li class="nav-item">-->
+                <!--        <a href="#about" class="nav-link"><span data-hover="About">About</span></a>-->
+                <!--    </li>-->
+                <!--    <li class="nav-item">-->
+                <!--        <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>-->
+                <!--    </li>-->
+
+                <!--    <li class="nav-item">-->
+                <!--        <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>-->
+                <!--    </li>-->
+                <!--</ul>-->
 
                 <ul class="navbar-nav ml-lg-auto">
                     <div class="ml-lg-4">
@@ -140,7 +138,7 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/selenium/selenium-original.svg" alt="Selenium" title="Selenium">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original-wordmark.svg" alt="Docker" title="Docker">
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/appwrite/appwrite-original.svg" alt="Appwrite" title="Appwrite">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-plain.svg" alt="Linux" title="Linux">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" alt="Linux" title="Linux">
      </div>
   </section>
 
