add icon for website

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="css/tooplate-style.css">
 
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="icon" href=
+          "https://img.icons8.com/bubbles/100/user.png"
+                  type="image/x-icon" />
+    
 
     <style>
 
@@ -24,7 +28,7 @@
     .skills-container {
         display: flex;
         flex-wrap: wrap;
-        gap: 20px;
+        gap: 30px;
         justify-content: center;
         max-width: 80%;
     }
